<resources>
    <string name="app_name">Lux PM</string>
    <string name="stay_on_the_top_of_your_finance">Stay on the top of your finance</string>
    <string name="sub_header">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="general_error">Something went wrong.</string>
    <string name="retry">Retry</string>
    <string name="name">Name</string>
    <string name="mobile_phone_number">Mobile Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="at_least_one_uppercase_letter">At least one uppercase letter</string>
    <string name="at_least_one_number">At least one number</string>
    <string name="at_least_one_special_character">At least one special character</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="under_implementation">Under implementation</string>
</resources>