<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/gradation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/gradation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_chart"
            app:layout_constraintEnd_toEndOf="@+id/gradation"
            app:layout_constraintStart_toStartOf="@+id/gradation"
            app:layout_constraintTop_toBottomOf="@+id/gradation" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/stay_on_the_top_of_your_finance"
            android:textAppearance="@style/landing_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvSubHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/merriweather"
            android:gravity="center"
            android:text="@string/sub_header"
            android:textAppearance="@style/landing_sub_header"
            app:layout_constraintEnd_toEndOf="@+id/tvHeader"
            app:layout_constraintStart_toStartOf="@+id/tvHeader"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:background="#3B286D"
            android:backgroundTint="#3B286D"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toTopOf="@+id/tvLogin"
            app:layout_constraintEnd_toEndOf="@+id/tvSubHeader"
            app:layout_constraintStart_toStartOf="@+id/tvSubHeader" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/login"
            android:textAppearance="@style/landing_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
            app:layout_constraintStart_toStartOf="@+id/btnSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>